import { describe, it, expect, beforeEach } from "vitest";
import { ConnectRouter } from "@connectrpc/connect";
import { VPSService } from "../../src/generated/obiente/cloud/vps/v1/vps_service_connect";
import {
  ListVPSInstancesRequest,
  ListVPSInstancesResponse,
  CreateVPSInstanceRequest,
  CreateVPSInstanceResponse,
  GetVPSInstanceRequest,
  GetVPSInstanceResponse,
  UpdateVPSInstanceRequest,
  UpdateVPSInstanceResponse,
  StartVPSInstanceRequest,
  StartVPSInstanceResponse,
  StopVPSInstanceRequest,
  StopVPSInstanceResponse,
  RestartVPSInstanceRequest,
  RestartVPSInstanceResponse,
  StreamVPSMetricsRequest,
  VPSMetricsUpdate,
  VPSInstance,
  Pagination,
} from "../../src/generated/obiente/cloud/vps/v1/vps_service_pb";

/**
 * Contract tests for VPSService protobuf interface
 * These tests validate VPS instance management and metrics streaming
 * Tests should FAIL initially until VPSService is implemented
 */
describe("VPSService Contract Tests", () => {
  let vpsService: VPSService;
  const mockOrgId = "org_123";
  const mockInstanceId = "vps_456";

  beforeEach(() => {
    // This will fail until VPSService is properly implemented
    vpsService = new VPSService();
  });

  describe("ListVPSInstances", () => {
    it("should accept ListVPSInstancesRequest and return ListVPSInstancesResponse", async () => {
      const request = new ListVPSInstancesRequest({
        organizationId: mockOrgId,
        page: 1,
        perPage: 10,
      });

      // This will fail - no implementation yet
      const response = await vpsService.listVPSInstances(request);

      expect(response).toBeInstanceOf(ListVPSInstancesResponse);
      expect(response.instances).toBeInstanceOf(Array);
      expect(response.pagination).toBeInstanceOf(Pagination);
      expect(response.pagination.page).toBe(1);
      expect(response.pagination.perPage).toBe(10);
    });

    it("should filter by VPS status when provided", async () => {
      const request = new ListVPSInstancesRequest({
        organizationId: mockOrgId,
        status: "running",
        page: 1,
        perPage: 10,
      });

      const response = await vpsService.listVPSInstances(request);

      // All returned instances should have 'running' status
      for (const instance of response.instances) {
        expect(instance.status).toBe("running");
      }
    });

    it("should respect organization-scoped access", async () => {
      const request = new ListVPSInstancesRequest({
        organizationId: "unauthorized_org",
        page: 1,
        perPage: 10,
      });

      await expect(vpsService.listVPSInstances(request)).rejects.toThrow(
        /not found|unauthorized/i
      );
    });

    it("should return VPS instances with complete specifications", async () => {
      const request = new ListVPSInstancesRequest({
        organizationId: mockOrgId,
        page: 1,
        perPage: 10,
      });

      const response = await vpsService.listVPSInstances(request);

      for (const instance of response.instances) {
        expect(instance.id).toBeDefined();
        expect(instance.name).toBeDefined();
        expect(["small", "medium", "large", "xlarge"]).toContain(instance.plan);
        expect(instance.cpuCores).toBeGreaterThan(0);
        expect(instance.memoryGb).toBeGreaterThan(0);
        expect(instance.diskGb).toBeGreaterThan(0);
        expect(instance.operatingSystem).toBeDefined();
        expect(instance.region).toBeDefined();
        expect(instance.ipAddress).toMatch(/^\d+\.\d+\.\d+\.\d+$/);
        expect([
          "starting",
          "running",
          "stopped",
          "error",
          "terminated",
        ]).toContain(instance.status);
        expect(instance.uptimePercentage).toBeGreaterThanOrEqual(0);
        expect(instance.uptimePercentage).toBeLessThanOrEqual(100);
      }
    });
  });

  describe("CreateVPSInstance", () => {
    it("should accept CreateVPSInstanceRequest and return CreateVPSInstanceResponse", async () => {
      const request = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: "Web Server",
        plan: "small",
        operatingSystem: "Ubuntu 22.04",
        region: "us-east-1",
      });

      // This will fail - no implementation yet
      const response = await vpsService.createVPSInstance(request);

      expect(response).toBeInstanceOf(CreateVPSInstanceResponse);
      expect(response.instance).toBeInstanceOf(VPSInstance);
      expect(response.instance.name).toBe("Web Server");
      expect(response.instance.plan).toBe("small");
      expect(response.instance.operatingSystem).toBe("Ubuntu 22.04");
      expect(response.instance.region).toBe("us-east-1");
      expect(response.instance.status).toBe("starting");
      expect(response.instance.id).toBeDefined();
      expect(response.instance.ipAddress).toBeDefined();
    });

    it("should validate VPS instance name requirements", async () => {
      const request = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: "", // Empty name
        plan: "small",
        operatingSystem: "Ubuntu 22.04",
        region: "us-east-1",
      });

      await expect(vpsService.createVPSInstance(request)).rejects.toThrow(
        /name/i
      );
    });

    it("should validate VPS plan types", async () => {
      const request = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: "Test Server",
        plan: "invalid-plan",
        operatingSystem: "Ubuntu 22.04",
        region: "us-east-1",
      });

      await expect(vpsService.createVPSInstance(request)).rejects.toThrow(
        /plan/i
      );
    });

    it("should validate operating system availability", async () => {
      const request = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: "Test Server",
        plan: "small",
        operatingSystem: "InvalidOS 99.99",
        region: "us-east-1",
      });

      await expect(vpsService.createVPSInstance(request)).rejects.toThrow(
        /operating system/i
      );
    });

    it("should validate region availability", async () => {
      const request = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: "Test Server",
        plan: "small",
        operatingSystem: "Ubuntu 22.04",
        region: "invalid-region",
      });

      await expect(vpsService.createVPSInstance(request)).rejects.toThrow(
        /region/i
      );
    });

    it("should respect organization VPS limits", async () => {
      // Mock organization with VPS limit reached
      const request = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: "Over Limit Server",
        plan: "small",
        operatingSystem: "Ubuntu 22.04",
        region: "us-east-1",
      });

      await expect(vpsService.createVPSInstance(request)).rejects.toThrow(
        /limit/i
      );
    });

    it("should assign unique IP addresses", async () => {
      const request1 = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: "Server One",
        plan: "small",
        operatingSystem: "Ubuntu 22.04",
        region: "us-east-1",
      });

      const request2 = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: "Server Two",
        plan: "small",
        operatingSystem: "Ubuntu 22.04",
        region: "us-east-1",
      });

      const [response1, response2] = await Promise.all([
        vpsService.createVPSInstance(request1),
        vpsService.createVPSInstance(request2),
      ]);

      expect(response1.instance.ipAddress).not.toBe(
        response2.instance.ipAddress
      );
      expect(response1.instance.ipAddress).toMatch(/^\d+\.\d+\.\d+\.\d+$/);
      expect(response2.instance.ipAddress).toMatch(/^\d+\.\d+\.\d+\.\d+$/);
    });

    it("should set correct resource specifications based on plan", async () => {
      const smallRequest = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: "Small Server",
        plan: "small",
        operatingSystem: "Ubuntu 22.04",
        region: "us-east-1",
      });

      const largeRequest = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: "Large Server",
        plan: "large",
        operatingSystem: "Ubuntu 22.04",
        region: "us-east-1",
      });

      const [smallResponse, largeResponse] = await Promise.all([
        vpsService.createVPSInstance(smallRequest),
        vpsService.createVPSInstance(largeRequest),
      ]);

      // Large plan should have more resources than small
      expect(largeResponse.instance.cpuCores).toBeGreaterThan(
        smallResponse.instance.cpuCores
      );
      expect(largeResponse.instance.memoryGb).toBeGreaterThan(
        smallResponse.instance.memoryGb
      );
      expect(largeResponse.instance.diskGb).toBeGreaterThan(
        smallResponse.instance.diskGb
      );
    });
  });

  describe("GetVPSInstance", () => {
    it("should accept GetVPSInstanceRequest and return GetVPSInstanceResponse", async () => {
      const request = new GetVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      // This will fail - no implementation yet
      const response = await vpsService.getVPSInstance(request);

      expect(response).toBeInstanceOf(GetVPSInstanceResponse);
      expect(response.instance).toBeInstanceOf(VPSInstance);
      expect(response.instance.id).toBe(mockInstanceId);
    });

    it("should enforce organization-scoped access", async () => {
      const request = new GetVPSInstanceRequest({
        organizationId: "wrong_org",
        instanceId: mockInstanceId,
      });

      await expect(vpsService.getVPSInstance(request)).rejects.toThrow(
        /not found|unauthorized/i
      );
    });

    it("should return complete VPS instance details with metrics", async () => {
      const request = new GetVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      const response = await vpsService.getVPSInstance(request);

      const instance = response.instance;
      expect(instance.cpuUsagePercent).toBeGreaterThanOrEqual(0);
      expect(instance.cpuUsagePercent).toBeLessThanOrEqual(100);
      expect(instance.memoryUsagePercent).toBeGreaterThanOrEqual(0);
      expect(instance.memoryUsagePercent).toBeLessThanOrEqual(100);
      expect(instance.diskUsagePercent).toBeGreaterThanOrEqual(0);
      expect(instance.diskUsagePercent).toBeLessThanOrEqual(100);
      expect(instance.bandwidthUsage).toBeGreaterThanOrEqual(0);
      expect(instance.createdAt).toBeDefined();
    });
  });

  describe("UpdateVPSInstance", () => {
    it("should accept UpdateVPSInstanceRequest and return UpdateVPSInstanceResponse", async () => {
      const request = new UpdateVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
        name: "Updated Server Name",
      });

      // This will fail - no implementation yet
      const response = await vpsService.updateVPSInstance(request);

      expect(response).toBeInstanceOf(UpdateVPSInstanceResponse);
      expect(response.instance.name).toBe("Updated Server Name");
    });

    it("should require VPS management permissions", async () => {
      const request = new UpdateVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
        name: "Unauthorized Update",
      });

      // Mock user without VPS permissions
      await expect(vpsService.updateVPSInstance(request)).rejects.toThrow(
        /permission/i
      );
    });

    it("should validate updated name requirements", async () => {
      const request = new UpdateVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
        name: "", // Invalid empty name
      });

      await expect(vpsService.updateVPSInstance(request)).rejects.toThrow(
        /name/i
      );
    });

    it("should prevent updates to terminated instances", async () => {
      const request = new UpdateVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: "terminated_instance_id",
        name: "Should Not Update",
      });

      await expect(vpsService.updateVPSInstance(request)).rejects.toThrow(
        /terminated|state/i
      );
    });
  });

  describe("StartVPSInstance", () => {
    it("should accept StartVPSInstanceRequest and return StartVPSInstanceResponse", async () => {
      const request = new StartVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      // This will fail - no implementation yet
      const response = await vpsService.startVPSInstance(request);

      expect(response).toBeInstanceOf(StartVPSInstanceResponse);
      expect(response.success).toBe(true);
    });

    it("should require VPS control permissions", async () => {
      const request = new StartVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      await expect(vpsService.startVPSInstance(request)).rejects.toThrow(
        /permission/i
      );
    });

    it("should only start stopped instances", async () => {
      const request = new StartVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: "running_instance_id",
      });

      await expect(vpsService.startVPSInstance(request)).rejects.toThrow(
        /already running|state/i
      );
    });

    it("should handle start failures gracefully", async () => {
      const request = new StartVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: "problematic_instance_id",
      });

      const response = await vpsService.startVPSInstance(request);

      // Should return success status even if start takes time
      expect(typeof response.success).toBe("boolean");
    });
  });

  describe("StopVPSInstance", () => {
    it("should accept StopVPSInstanceRequest and return StopVPSInstanceResponse", async () => {
      const request = new StopVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      // This will fail - no implementation yet
      const response = await vpsService.stopVPSInstance(request);

      expect(response).toBeInstanceOf(StopVPSInstanceResponse);
      expect(response.success).toBe(true);
    });

    it("should require VPS control permissions", async () => {
      const request = new StopVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      await expect(vpsService.stopVPSInstance(request)).rejects.toThrow(
        /permission/i
      );
    });

    it("should only stop running instances", async () => {
      const request = new StopVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: "stopped_instance_id",
      });

      await expect(vpsService.stopVPSInstance(request)).rejects.toThrow(
        /already stopped|state/i
      );
    });

    it("should handle graceful shutdown", async () => {
      const request = new StopVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      const startTime = Date.now();
      const response = await vpsService.stopVPSInstance(request);
      const endTime = Date.now();

      expect(response.success).toBe(true);
      // Should not block for extended period
      expect(endTime - startTime).toBeLessThan(5000); // 5 seconds max
    });
  });

  describe("RestartVPSInstance", () => {
    it("should accept RestartVPSInstanceRequest and return RestartVPSInstanceResponse", async () => {
      const request = new RestartVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      // This will fail - no implementation yet
      const response = await vpsService.restartVPSInstance(request);

      expect(response).toBeInstanceOf(RestartVPSInstanceResponse);
      expect(response.success).toBe(true);
    });

    it("should require VPS control permissions", async () => {
      const request = new RestartVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      await expect(vpsService.restartVPSInstance(request)).rejects.toThrow(
        /permission/i
      );
    });

    it("should only restart running instances", async () => {
      const request = new RestartVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: "stopped_instance_id",
      });

      await expect(vpsService.restartVPSInstance(request)).rejects.toThrow(
        /not running|state/i
      );
    });

    it("should handle restart operation atomically", async () => {
      const request = new RestartVPSInstanceRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      const response = await vpsService.restartVPSInstance(request);

      expect(response.success).toBe(true);
      // Restart should be atomic operation
    });
  });

  describe("StreamVPSMetrics", () => {
    it("should accept StreamVPSMetricsRequest and return stream", async () => {
      const request = new StreamVPSMetricsRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      // This will fail - no implementation yet
      const stream = vpsService.streamVPSMetrics(request);

      expect(stream).toBeDefined();
      expect(typeof stream[Symbol.asyncIterator]).toBe("function");
    });

    it("should stream VPS metrics updates", async () => {
      const request = new StreamVPSMetricsRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      const stream = vpsService.streamVPSMetrics(request);
      const metrics: VPSMetricsUpdate[] = [];

      // Collect first few metrics
      let count = 0;
      for await (const metric of stream) {
        metrics.push(metric);
        count++;
        if (count >= 3) break; // Don't run forever
      }

      expect(metrics.length).toBeGreaterThan(0);

      for (const metric of metrics) {
        expect(metric).toBeInstanceOf(VPSMetricsUpdate);
        expect(metric.instanceId).toBe(mockInstanceId);
        expect(metric.cpuUsagePercent).toBeGreaterThanOrEqual(0);
        expect(metric.cpuUsagePercent).toBeLessThanOrEqual(100);
        expect(metric.memoryUsagePercent).toBeGreaterThanOrEqual(0);
        expect(metric.memoryUsagePercent).toBeLessThanOrEqual(100);
        expect(metric.diskUsagePercent).toBeGreaterThanOrEqual(0);
        expect(metric.diskUsagePercent).toBeLessThanOrEqual(100);
        expect(metric.timestamp).toBeDefined();
      }
    });

    it("should enforce organization access for streaming", async () => {
      const request = new StreamVPSMetricsRequest({
        organizationId: "wrong_org",
        instanceId: mockInstanceId,
      });

      const stream = vpsService.streamVPSMetrics(request);

      await expect(async () => {
        for await (const metric of stream) {
          // Should throw on first iteration
          break;
        }
      }).rejects.toThrow(/not found|unauthorized/i);
    });

    it("should provide real-time metrics updates", async () => {
      const request = new StreamVPSMetricsRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      const stream = vpsService.streamVPSMetrics(request);
      const timestamps: Date[] = [];

      let count = 0;
      for await (const metric of stream) {
        timestamps.push(new Date(metric.timestamp.seconds * 1000));
        count++;
        if (count >= 3) break;
      }

      // Metrics should be relatively fresh (within last minute)
      const now = new Date();
      for (const timestamp of timestamps) {
        const age = now.getTime() - timestamp.getTime();
        expect(age).toBeLessThan(60000); // Less than 1 minute old
      }
    });

    it("should handle stream interruption gracefully", async () => {
      const request = new StreamVPSMetricsRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      const stream = vpsService.streamVPSMetrics(request);

      // Simulate connection interruption
      setTimeout(() => {
        // Mock network interruption
      }, 100);

      const metrics: VPSMetricsUpdate[] = [];
      try {
        for await (const metric of stream) {
          metrics.push(metric);
          if (metrics.length >= 2) break;
        }
      } catch (error) {
        // Connection errors should be handled gracefully
        expect(error).toBeDefined();
      }
    });

    it("should only stream metrics for running instances", async () => {
      const request = new StreamVPSMetricsRequest({
        organizationId: mockOrgId,
        instanceId: "stopped_instance_id",
      });

      const stream = vpsService.streamVPSMetrics(request);

      await expect(async () => {
        for await (const metric of stream) {
          // Should not receive metrics for stopped instance
          break;
        }
      }).rejects.toThrow(/not running|stopped/i);
    });
  });

  describe("Security and Validation", () => {
    it("should validate all organizationId parameters", async () => {
      const requests = [
        () =>
          vpsService.listVPSInstances(
            new ListVPSInstancesRequest({
              organizationId: "",
              page: 1,
              perPage: 10,
            })
          ),
        () =>
          vpsService.createVPSInstance(
            new CreateVPSInstanceRequest({
              organizationId: "",
              name: "test",
              plan: "small",
              operatingSystem: "Ubuntu",
              region: "us-east-1",
            })
          ),
        () =>
          vpsService.getVPSInstance(
            new GetVPSInstanceRequest({
              organizationId: "",
              instanceId: "test",
            })
          ),
      ];

      for (const request of requests) {
        await expect(request()).rejects.toThrow(/organization/i);
      }
    });

    it("should sanitize VPS instance names", async () => {
      const request = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: '<script>alert("xss")</script>Web Server',
        plan: "small",
        operatingSystem: "Ubuntu 22.04",
        region: "us-east-1",
      });

      const response = await vpsService.createVPSInstance(request);

      // Should sanitize harmful content
      expect(response.instance.name).not.toContain("<script>");
      expect(response.instance.name).toContain("Web Server");
    });

    it("should rate limit VPS operations", async () => {
      const requests = Array.from(
        { length: 10 },
        () =>
          new StartVPSInstanceRequest({
            organizationId: mockOrgId,
            instanceId: mockInstanceId,
          })
      );

      // Should implement rate limiting for rapid operations
      const promises = requests.map((req) => vpsService.startVPSInstance(req));

      // Some later requests should be rate limited
      await expect(Promise.all(promises)).rejects.toThrow(
        /rate limit|too many/i
      );
    });

    it("should validate resource limits based on organization plan", async () => {
      const request = new CreateVPSInstanceRequest({
        organizationId: mockOrgId,
        name: "Huge Server",
        plan: "xlarge",
        operatingSystem: "Ubuntu 22.04",
        region: "us-east-1",
      });

      // Starter plan should not allow xlarge instances
      await expect(vpsService.createVPSInstance(request)).rejects.toThrow(
        /plan|limit|upgrade/i
      );
    });
  });

  describe("Performance Requirements", () => {
    it("should respond to list VPS instances within performance target", async () => {
      const request = new ListVPSInstancesRequest({
        organizationId: mockOrgId,
        page: 1,
        perPage: 20,
      });

      const startTime = Date.now();
      await vpsService.listVPSInstances(request);
      const endTime = Date.now();

      // Should meet <200ms requirement
      expect(endTime - startTime).toBeLessThan(200);
    });

    it("should handle concurrent VPS operations", async () => {
      const requests = Array.from(
        { length: 5 },
        (_, i) =>
          new GetVPSInstanceRequest({
            organizationId: mockOrgId,
            instanceId: `instance_${i}`,
          })
      );

      const startTime = Date.now();
      const promises = requests.map((req) => vpsService.getVPSInstance(req));
      await Promise.allSettled(promises); // Allow some to fail
      const endTime = Date.now();

      // Concurrent requests should not significantly degrade performance
      expect(endTime - startTime).toBeLessThan(500);
    });

    it("should stream metrics efficiently", async () => {
      const request = new StreamVPSMetricsRequest({
        organizationId: mockOrgId,
        instanceId: mockInstanceId,
      });

      const stream = vpsService.streamVPSMetrics(request);
      const startTime = Date.now();

      let count = 0;
      for await (const metric of stream) {
        count++;
        if (count >= 5) break; // Collect 5 metrics
      }

      const endTime = Date.now();
      const totalTime = endTime - startTime;

      // Should receive metrics efficiently
      expect(totalTime).toBeLessThan(2000); // 2 seconds for 5 metrics
      expect(count).toBe(5);
    });
  });
});
